@@ -1,0 +1,27 @@
+#!/sbin/runscript
+# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Distributed under the terms of the GNU General Public License, v2 or later
+# $Header:
+
+depend() {
+	use logger
+}
+
+PIDFILE="/var/run/motion.pid"
+DAEMON="/usr/bin/motion"
+
+start() {
+	ebegin "Starting motion detection"
+	start-stop-daemon --start --quiet --make-pidfile \
+			--pidfile ${PIDFILE} \
+			--exec ${DAEMON} 2&>1 & > /dev/null 
+	eend $?
+}
+
+stop() {
+	ebegin "Stopping motion detection"
+	start-stop-daemon --stop --quiet --pidfile ${PIDFILE}
+	sleep 3
+	rm ${PIDFILE}
+	eend $?
+}
