@@ -1,6 +1,6 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-video/motion/motion-3.1.12.ebuild,v 1.1 2004/04/16 18:50:13 martini Exp $ 
+# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-video/motion/motion-3.1.12.ebuild,v 1.2 2004/07/28 20:26:35 martini Exp $ 
 
 DESCRIPTION="A software motion detector. It grabs images from video4linux devices and/or webcams"
 HOMEPAGE="http://motion.sf.net"
@@ -52,9 +52,12 @@ src_install() {
 	einstall || die "install problem !"
 	
 	#Needed because --sysconfdir do not install motion.conf in the right place
-	rm ${D}/etc/motion.conf
+	rm ${D}/etc/motion-dist.conf
 	insinto /etc/motion
-	doins ${S}/motion.conf
+	doins ${S}/motion-dist.conf
+	insinto /etc/init.d
+	insopts -m755
+	newins ${FILESDIR}/rc.motion motion
 }
 
 pkg_postinst() {
